Implementing memberDiscovery operation